--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@chakra-ui/cli": "^3.18.0",
     "@chakra-ui/react": "^3.17.0",
     "@emotion/react": "^11.14.0",
+    "@pixi/mesh-extras": "^7.4.3",
     "@pixi/react": "^8.0.3",
     "@tanstack/react-query": "^5.76.0",
     "@tanstack/react-router": "^1.114.3",
     "@tanstack/react-router-devtools": "^1.114.3",
     "@tanstack/router-plugin": "^1.114.3",
     "framer-motion": "^12.11.3",
+    "matter-js": "^0.20.0",
     "next-themes": "^0.4.6",
     "pixi.js": "^8.11.0",
     "react": "^19.0.0",
