--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@chakra-ui/react": "^3.17.0",
     "@emotion/react": "^11.14.0",
     "@pixi/mesh-extras": "^7.4.3",
-    "@pixi/react": "^8.0.3",
+    "@pixi/react": "^8.0.2",
     "@tanstack/react-query": "^5.76.0",
     "@tanstack/react-router": "^1.114.3",
     "@tanstack/react-router-devtools": "^1.114.3",
@@ -27,7 +27,8 @@
     "framer-motion": "^12.11.3",
     "matter-js": "^0.20.0",
     "next-themes": "^0.4.6",
-    "pixi.js": "^8.11.0",
+    "pixi-viewport": "^6.0.3",
+    "pixi.js": "^8.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
