--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "vite build && tsc",
     "serve": "vite preview",
     "test": "vitest run",
-    "chakra:types": "npx @chakra-ui/cli typegen ./src/components/theme/index.ts --outdir ./src/components/theme/types > NUL 2>&1",
+    "chakra:types": "npx @chakra-ui/cli typegen ./src/components/theme/index.ts",
     "chakra:watch": "chokidar \"src/components/theme/**/*.ts\" \"!src/components/theme/**/*.d.ts\" -c \"npm run chakra:types\" > NUL 2>&1",
     "test:watch": "chokidar \"src/components/theme/**/*.ts\" -c \"npm run test:watch\"",
     "test:watch-chok": "echo testing"
